Fixed breaks on About Me

--- a/styles/about.css
+++ b/styles/about.css
@@ -60,8 +60,8 @@ background-size: cover;
 
 }
 p {
-    font-size: 1em;
-    padding-left: 0.2em;
+    font-size: 0.6em;
+    padding-left: 0.5em;
     text-align: center;
 }
 @media screen and (min-width: 700px) {
